seaqt/QtWebEngineCore/gen_qwebenginecookiestore.h

class QMetaObject;
class QNetworkCookie;
class QUrl;
class QWebEngineCookieStore;
typedef QWebEngineCookieStore::FilterRequest QWebEngineCookieStore__FilterRequest;
class QWebEngineCookieStore__FilterRequest;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkCookie QNetworkCookie;
typedef struct QUrl QUrl;
typedef struct QWebEngineCookieStore QWebEngineCookieStore;
typedef struct QWebEngineCookieStore__FilterRequest QWebEngineCookieStore__FilterRequest;
QMetaObject* QWebEngineCookieStore_metaObject(const QWebEngineCookieStore* self);
void* QWebEngineCookieStore_metacast(QWebEngineCookieStore* self, const char* param1);
int QWebEngineCookieStore_metacall(QWebEngineCookieStore* self, int param1, int param2, void** param3);
struct miqt_string QWebEngineCookieStore_tr(const char* s);
void QWebEngineCookieStore_setCookie(QWebEngineCookieStore* self, QNetworkCookie* cookie);
void QWebEngineCookieStore_deleteCookie(QWebEngineCookieStore* self, QNetworkCookie* cookie);
void QWebEngineCookieStore_deleteSessionCookies(QWebEngineCookieStore* self);
void QWebEngineCookieStore_deleteAllCookies(QWebEngineCookieStore* self);
void QWebEngineCookieStore_loadAllCookies(QWebEngineCookieStore* self);
void QWebEngineCookieStore_cookieAdded(QWebEngineCookieStore* self, QNetworkCookie* cookie);
void QWebEngineCookieStore_connect_cookieAdded(QWebEngineCookieStore* self, intptr_t slot);
void QWebEngineCookieStore_cookieRemoved(QWebEngineCookieStore* self, QNetworkCookie* cookie);
void QWebEngineCookieStore_connect_cookieRemoved(QWebEngineCookieStore* self, intptr_t slot);
struct miqt_string QWebEngineCookieStore_tr2(const char* s, const char* c);
struct miqt_string QWebEngineCookieStore_tr3(const char* s, const char* c, int n);
void QWebEngineCookieStore_setCookie2(QWebEngineCookieStore* self, QNetworkCookie* cookie, QUrl* origin);
void QWebEngineCookieStore_deleteCookie2(QWebEngineCookieStore* self, QNetworkCookie* cookie, QUrl* origin);
const QMetaObject* QWebEngineCookieStore_staticMetaObject();
void QWebEngineCookieStore_delete(QWebEngineCookieStore* self);
QWebEngineCookieStore__FilterRequest* QWebEngineCookieStore__FilterRequest_new(QWebEngineCookieStore__FilterRequest* param1);
void QWebEngineCookieStore__FilterRequest_operatorAssign(QWebEngineCookieStore__FilterRequest* self, QWebEngineCookieStore__FilterRequest* param1);
void QWebEngineCookieStore__FilterRequest_delete(QWebEngineCookieStore__FilterRequest* self);